feat: role 추가 (인가는 나중에 처리)